--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Run Unit Tests with Maven
-        run: mvn --batch-mode test -Dcheckstyle.skip=true
+        run: mvn --batch-mode test
 
   integration-test:
     needs: unit-test
@@ -41,4 +41,4 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Run Integration Tests with Maven
-        run: mvn --batch-mode verify
+        run: mvn --batch-mode verify -Dskip.ut=true
