--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>SoundE</description>
     <properties>
         <java.version>17</java.version>
+        <skip.ut>false</skip.ut>
     </properties>
     <dependencies>
         <dependency>
@@ -106,10 +107,7 @@
             <version>2.3.232</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
-
-
     <build>
         <plugins>
             <plugin>
@@ -119,8 +117,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
-                <version>2.22.0</version>
+                <version>3.5.2</version>
+                <configuration>
+                    <skipTests>${skip.ut}</skipTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
