--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.fpmislata.daw1</groupId>
     <artifactId>SoundE</artifactId>
     <name>SoundE</name>
-    <version>0.6</version>
+    <version>0.7</version>
     <description>SoundE</description>
     <properties>
         <java.version>17</java.version>
@@ -134,6 +134,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
