--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
             <version>2.3.232</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>6.1.5</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
